--- a/QuizLMS/build.gradle
+++ b/QuizLMS/build.gradle
@@ -18,9 +18,57 @@ repositories {
 }
 
 dependencies {
+	// Spring Boot 스타터 - 웹 애플리케이션 개발
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+
+	// Spring Boot 스타터 - 데이터 JPA (데이터베이스 접근을 위한 ORM)
+	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+
+	// Spring Boot 스타터 - Thymeleaf 템플릿 엔진
+	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
+
+	// Thymeleaf 확장 - 레이아웃 다이얼렉트 지원
+	implementation 'nz.net.ultraq.thymeleaf:thymeleaf-layout-dialect'
+
+	// Spring Boot 스타터 - Spring Security (보안 및 인증)
+	implementation "org.springframework.boot:spring-boot-starter-security"
+
+	// Thymeleaf Security 확장
+	implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity6'
+
+	// Validation - Java Bean Validation (JSR 380) 구현체
+	implementation 'org.springframework.boot:spring-boot-starter-validation'
+
+	// CommonMark - Markdown 파싱 라이브러리
+	implementation 'org.commonmark:commonmark:0.21.0'
+
+	// Lombok - 코드 단순화를 위한 라이브러리 (자동 생성자, 게터/세터 등)
+	implementation 'org.projectlombok:lombok'
+	annotationProcessor 'org.projectlombok:lombok'
+
+	// Spring Boot DevTools - 개발 편의성 향상을 위한 도구 (자동 리스타트 등)
+	developmentOnly 'org.springframework.boot:spring-boot-devtools'
+
+	// H2 Database - 인메모리 데이터베이스 (테스트 또는 개발용)
+	implementation 'com.h2database:h2'
+
+	// Springdoc OpenAPI - Swagger/OpenAPI 지원 (API 문서화)
+	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.1.0'
+
+	// Testing - JUnit 5 및 Spring Boot 테스트 지원
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	testImplementation 'org.junit.jupiter:junit-jupiter'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+
+	//JWT
+	implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
+	implementation 'io.jsonwebtoken:jjwt-impl:0.11.5'
+	implementation 'io.jsonwebtoken:jjwt-jackson:0.11.5'
+
+	// oracle
+	runtimeOnly 'com.oracle.database.jdbc:ojdbc11'
+	implementation 'com.oracle.database.jdbc:ojdbc8:19.8.0.0'
+
 }
 
 tasks.named('test') {
