--- a/QuizLMS/build.gradle
+++ b/QuizLMS/build.gradle
@@ -66,7 +66,7 @@ dependencies {
 	implementation 'io.jsonwebtoken:jjwt-jackson:0.11.5'
 
 	// oracle
-	runtimeOnly 'com.oracle.database.jdbc:ojdbc11'
+	//runtimeOnly 'com.oracle.database.jdbc:ojdbc11'
 	implementation 'com.oracle.database.jdbc:ojdbc8:19.8.0.0'
 
 }
