--- a/QuizLMS/build.gradle
+++ b/QuizLMS/build.gradle
@@ -76,3 +76,8 @@ dependencies {
 tasks.named('test') {
 	useJUnitPlatform()
 }
+
+tasks.withType(JavaCompile) {
+    options.compilerArgs += ['-parameters']
+
+}
