--- a/QuizLMS/src/main/resources/application.properties
+++ b/QuizLMS/src/main/resources/application.properties
@@ -2,6 +2,7 @@ spring.application.name=QuizLMS
 server.port=9090
 
 # oracle
+#spring.datasource.url=jdbc:oracle:thin:@192.168.0.17:1521/xe
 spring.datasource.url=jdbc:oracle:thin:@localhost:1521/xe
 spring.datasource.username=quiz
 spring.datasource.password=1234
