--- a/QuizLMS/src/main/resources/application.properties
+++ b/QuizLMS/src/main/resources/application.properties
@@ -26,3 +26,9 @@ spring.thymeleaf.cache=false
 
 
 logging.level.org.springframework.security = DEBUG
+
+# 세션 만료 시간 설정 (예: 30분)
+server.servlet.session.timeout=30m
+
+
+
