--- a/QuizLMS/src/main/resources/application.properties
+++ b/QuizLMS/src/main/resources/application.properties
@@ -2,8 +2,8 @@ spring.application.name=QuizLMS
 server.port=9090
 
 # oracle
-#spring.datasource.url=jdbc:oracle:thin:@//192.168.0.22:1521/xe
-spring.datasource.url=jdbc:oracle:thin:@//localhost:1521/xe
+spring.datasource.url=jdbc:oracle:thin:@//192.168.0.22:1521/xe
+#spring.datasource.url=jdbc:oracle:thin:@//localhost:1521/xe
 spring.datasource.username=quiz
 spring.datasource.password=1234
 spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
