--- a/QuizLMS/build.gradle
+++ b/QuizLMS/build.gradle
@@ -69,6 +69,7 @@ dependencies {
 	//runtimeOnly 'com.oracle.database.jdbc:ojdbc11'
 	implementation 'com.oracle.database.jdbc:ojdbc8:19.8.0.0'
 
+//	runtimeOnly 'mysql:mysql-connector-java'
 
 
 }
