--- a/QuizLMS/src/main/resources/application.properties
+++ b/QuizLMS/src/main/resources/application.properties
@@ -1,15 +1,16 @@
 spring.application.name=QuizLMS
 server.port=9090
 
-# oracle
-#spring.datasource.url=jdbc:oracle:thin:@192.168.0.17:1521/xe
-spring.datasource.url=jdbc:oracle:thin:@localhost:1521/xe
-spring.datasource.username=quiz
+
+
+spring.datasource.url=jdbc:mysql://localhost:3306/chatbot
+spring.datasource.username=root
 spring.datasource.password=1234
-spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
 
 # jpa
-spring.jpa.database-platform=org.hibernate.dialect.OracleDialect
+spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
