--- a/QuizLMS/src/main/resources/application.properties
+++ b/QuizLMS/src/main/resources/application.properties
@@ -8,17 +8,17 @@ server.port=9090
 #spring.datasource.password=1234
 #spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
 
-spring.datasource.url=jdbc:mysql://localhost:3306/chatbot
-spring.datasource.username=root
-spring.datasource.password=1234
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-
-
-## MySQL
-#spring.datasource.url=jdbc:mysql://localhost:3306/quiz
+#spring.datasource.url=jdbc:mysql://localhost:3306/chatbot
 #spring.datasource.username=root
 #spring.datasource.password=1234
 #spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+
+## MySQL
+spring.datasource.url=jdbc:mysql://localhost:3306/quiz
+spring.datasource.username=root
+spring.datasource.password=1234
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # jpa
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
