--- a/QuizLMS/src/main/resources/application.properties
+++ b/QuizLMS/src/main/resources/application.properties
@@ -15,7 +15,7 @@ server.port=9090
 
 
 ## MySQL
-spring.datasource.url=jdbc:mysql://localhost:3306/chatbot
+spring.datasource.url=jdbc:mysql://localhost:3306/quiz
 spring.datasource.username=root
 spring.datasource.password=1234
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
