--- a/QuizLMS/src/main/resources/application.properties
+++ b/QuizLMS/src/main/resources/application.properties
@@ -37,10 +37,16 @@ spring.thymeleaf.mode=HTML
 spring.thymeleaf.cache=false
 
 anthropic.api.key=${ANTHROPIC_API_KEY}
+flask.server.url=http://localhost:5000
+logging.level.com.Quiz.lms=INFO
+logging.file.name=./logs/application.log
 
 logging.level.org.springframework.security = DEBUG
 
 server.servlet.session.timeout=30m
+
+
+
 
 
 
